Ensure second level nav items align on S screens
Fixes #1765

--- a/static/sass/_v1_pattern_navigation.scss
+++ b/static/sass/_v1_pattern_navigation.scss
@@ -249,6 +249,7 @@
       display: inline-block;
       padding-left: 0;
       margin-bottom: 0;
+      margin-left: .125rem;
     }
 
     .second-level-nav & {
@@ -264,7 +265,7 @@
 
     @media (max-width: $breakpoint-medium - 1) {
       .p-inline-list__item {
-        padding: .75rem 1rem;
+        padding: .5rem;
       }
     }
 
